--- a/Weather/Base.lproj/LaunchScreen.storyboard
+++ b/Weather/Base.lproj/LaunchScreen.storyboard
@@ -24,30 +24,33 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sunday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHp-Us-Cg7">
-                                <rect key="frame" x="179" y="120" width="56" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHp-Us-Cg7">
+                                <rect key="frame" x="179" y="114" width="56" height="24"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfK-Jv-5N7">
-                                <rect key="frame" x="184" y="542" width="47" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OMn-uE-FN9">
+                                <rect key="frame" x="107" y="168" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="F9e-Dc-l9T"/>
+                                    <constraint firstAttribute="width" constant="200" id="GG8-CE-LYJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfK-Jv-5N7">
+                                <rect key="frame" x="183.5" y="370" width="47" height="24"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oy-Qy-kor">
-                                <rect key="frame" x="171" y="660" width="72" height="82"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oy-Qy-kor">
+                                <rect key="frame" x="171" y="419" width="72" height="82"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="60"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAF-K6-hVy">
-                                <rect key="frame" x="251" y="676" width="19" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAF-K6-hVy">
+                                <rect key="frame" x="251" y="462" width="19" height="24"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -55,8 +58,18 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4oy-Qy-kor" firstAttribute="top" secondItem="UfK-Jv-5N7" secondAttribute="bottom" constant="25" id="6eD-nk-X1t"/>
+                            <constraint firstItem="OMn-uE-FN9" firstAttribute="top" secondItem="wHp-Us-Cg7" secondAttribute="bottom" constant="30" id="6x2-kV-dVp"/>
+                            <constraint firstItem="wHp-Us-Cg7" firstAttribute="top" secondItem="Gig-Xl-8ou" secondAttribute="bottom" constant="2" id="FBP-3k-wph"/>
+                            <constraint firstItem="UfK-Jv-5N7" firstAttribute="top" secondItem="OMn-uE-FN9" secondAttribute="bottom" constant="38" id="UXY-oI-fMA"/>
+                            <constraint firstItem="cAF-K6-hVy" firstAttribute="top" secondItem="4oy-Qy-kor" secondAttribute="bottom" constant="-39" id="VU7-DN-8cW"/>
+                            <constraint firstItem="4oy-Qy-kor" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="afE-x3-lIb"/>
                             <constraint firstItem="Gig-Xl-8ou" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="i1F-vW-ev4"/>
                             <constraint firstItem="Gig-Xl-8ou" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="jJr-8L-8eh"/>
+                            <constraint firstItem="cAF-K6-hVy" firstAttribute="leading" secondItem="4oy-Qy-kor" secondAttribute="trailing" constant="8" id="jye-v0-6Du"/>
+                            <constraint firstItem="UfK-Jv-5N7" firstAttribute="top" secondItem="OMn-uE-FN9" secondAttribute="bottom" constant="2" id="kKg-nL-JcT"/>
+                            <constraint firstItem="wHp-Us-Cg7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mqD-Z8-kw3"/>
+                            <constraint firstItem="UfK-Jv-5N7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vtG-Lf-ymZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
