Changes clothing images based on weather

--- a/Weather/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Weather/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="UEH-R8-644">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="5" width="414" height="736"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <viewLayoutGuide key="safeArea" id="n3n-5E-Mk1"/>
                             </view>
@@ -32,43 +32,56 @@
                                 <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PZ-Op-mFx">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PZ-Op-mFx">
                                 <rect key="frame" x="254" y="405" width="28" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbq-dp-H4u">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbq-dp-H4u">
                                 <rect key="frame" x="162" y="363" width="51" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="grh-A0-R0Z">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KwZ-3v-jC2">
+                                <rect key="frame" x="56" y="455" width="129" height="83"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="grh-A0-R0Z">
                                 <rect key="frame" x="148" y="409" width="79" height="72"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="60"/>
                                 <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01d" translatesAutoresizingMaskIntoConstraints="NO" id="HF2-PA-R8M">
-                                <rect key="frame" x="87.666666666666686" y="161" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="01d" translatesAutoresizingMaskIntoConstraints="NO" id="HF2-PA-R8M">
+                                <rect key="frame" x="87" y="155" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="K8N-qp-OpP"/>
                                     <constraint firstAttribute="width" constant="200" id="zvO-fZ-BEd"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rHh-Mi-XcT">
+                                <rect key="frame" x="56" y="582" width="129" height="83"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KrE-nw-XfB">
+                                <rect key="frame" x="246" y="599" width="129" height="83"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7th-nS-DUw">
+                                <rect key="frame" x="197" y="452" width="129" height="83"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cbq-dp-H4u" firstAttribute="top" secondItem="HF2-PA-R8M" secondAttribute="bottom" constant="2" id="4VQ-hf-P2o"/>
                             <constraint firstItem="1PZ-Op-mFx" firstAttribute="leading" secondItem="grh-A0-R0Z" secondAttribute="trailing" constant="7.3333333333333428" id="8UC-eK-bTY"/>
                             <constraint firstItem="faL-ro-RCc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Bk0-E3-jED"/>
                             <constraint firstItem="nGg-fY-Gkw" firstAttribute="top" secondItem="faL-ro-RCc" secondAttribute="bottom" constant="2" id="PZu-XP-CPE"/>
                             <constraint firstItem="faL-ro-RCc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rep-0a-7Kf"/>
                             <constraint firstItem="grh-A0-R0Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VRh-73-vEW"/>
                             <constraint firstItem="1PZ-Op-mFx" firstAttribute="top" secondItem="grh-A0-R0Z" secondAttribute="bottom" constant="-32" id="WIV-hp-3UP"/>
-                            <constraint firstItem="HF2-PA-R8M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XzE-eX-Tbs"/>
-                            <constraint firstItem="HF2-PA-R8M" firstAttribute="top" secondItem="nGg-fY-Gkw" secondAttribute="bottom" constant="30" id="ZaL-kX-ufa"/>
                             <constraint firstItem="cbq-dp-H4u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nnr-cK-fxn"/>
                             <constraint firstItem="grh-A0-R0Z" firstAttribute="top" secondItem="cbq-dp-H4u" secondAttribute="bottom" constant="25" id="pja-1b-yhi"/>
                             <constraint firstItem="nGg-fY-Gkw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sAY-07-uXF"/>
@@ -77,11 +90,15 @@
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="UEH-R8-644" id="Aqp-so-2fW"/>
+                        <outlet property="bottomImageView" destination="KrE-nw-XfB" id="9ja-Zw-roK"/>
                         <outlet property="conditionLabel" destination="cbq-dp-H4u" id="nxJ-HJ-UHw"/>
                         <outlet property="contitionImageView" destination="HF2-PA-R8M" id="ETJ-1O-apv"/>
                         <outlet property="dayLabel" destination="nGg-fY-Gkw" id="89Y-da-QI4"/>
+                        <outlet property="hatImageView" destination="KwZ-3v-jC2" id="n45-gt-uvS"/>
                         <outlet property="locationLabel" destination="faL-ro-RCc" id="W48-pl-7Lt"/>
+                        <outlet property="shoesImageView" destination="7th-nS-DUw" id="AHM-Ye-RuN"/>
                         <outlet property="temperatureLabel" destination="grh-A0-R0Z" id="w4H-rQ-13Q"/>
+                        <outlet property="topImageView" destination="rHh-Mi-XcT" id="aX3-rQ-eh2"/>
                         <outlet property="unitLabel" destination="1PZ-Op-mFx" id="zIC-UH-5qd"/>
                     </connections>
                 </viewController>
